fixing slidebar toggle open on mobile devices

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -7,10 +7,14 @@
   z-index: 999;
   transition: transform 0.3s ease-in-out;
 
+  &.open {
+    transform: translateX(-50%);
+  }
+
   .flap {
     width: 40px;
     height: 100px;
-    background-color: grey;
+    background-color: rgb(23, 23, 136);
     position: absolute;
     right: -15px;
     top: 40%;
@@ -29,6 +33,6 @@
 
   @media (max-width: 480px) {
     width: 100%;
-    transform: translateX(-97%);
+    transform: translateX(-100%);
   }
 }
